--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <div class="wrapper">
-
             <div class="content shadow">
                <div class="row">
-                   <div class="col-md-2">
-                        <span>List of workouts</span>
+                   <div class="col-md-4">
+                        <span class="glyphicon glyphicon-chevron-left limeColor"></span>List of workouts
                    </div>
-                   <div class="col-md-8"></div>
+                   <div class="col-md-6"></div>
                    <div class="col-md-2">
                        <button class="button">
-                           <span class="glyphicon glyphicon-heart"></span> 192
+                           <span class="glyphicon glyphicon-heart "></span> 192
                        </button>
                    </div>
                </div>
